objects/SBQQ__QuoteLine__c.object
<CustomObject>
    <fields>
        <fullName>SBQQ__SubscriptionType__c</fullName>
        <description>Indicates the subscription type to determine contract&apos;s pricing.</description>
        <inlineHelpText>Indicates the subscription type to determine contract&apos;s pricing.</inlineHelpText>
        <label>Subscription Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>SBQQ__ProductSubscriptionType__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>SBQQ__SubscriptionType</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>SBQQ__TaxCode__c</fullName>
        <description>Specifies the tax code for taxation rules.</description>
        <inlineHelpText>Specifies the tax code for taxation rules.</inlineHelpText>
        <label>Tax code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SBQQ__Taxable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is this line item taxable.</description>
        <inlineHelpText>Indicates if the line item is taxable</inlineHelpText>
        <label>Taxable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SBQQ__TermDiscountSchedule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Schedule for discounts based on subscription term. This is useful when you want to show a breakdown of payments in separate groups, for different terms, yet you want to discount reflected for the entire duration of the subscription. Leave Term Discount Level blank if you want discount schedules applied based on the term of each line item.</description>
        <inlineHelpText>Schedule for discounts based on subscription term. Setting this to &quot;Group&quot; applies the discount rate for the group term, while setting it to &quot;Quote&quot; applies the discount rate for the entire quote term, regardless of the different terms in your groups.</inlineHelpText>
        <label>Term Discount Schedule</label>
        <referenceTo>SBQQ__DiscountSchedule__c</referenceTo>
        <relationshipLabel>Quote Lines (Term Discouned)</relationshipLabel>
        <relationshipName>TermDiscountedQuoteLines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__TermDiscountTier__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Tier within the term discount schedule used to discount this line item.</description>
        <inlineHelpText>Tier within the term discount schedule used to discount this line item.</inlineHelpText>
        <label>Term Discount Tier</label>
        <referenceTo>SBQQ__DiscountTier__c</referenceTo>
        <relationshipLabel>Quote Lines (Term Discounted)</relationshipLabel>
        <relationshipName>TermDiscountedQuoteLines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__TermDiscount__c</fullName>
        <description>Discount calculated by applying subscription term against term discount schedule.</description>
        <inlineHelpText>Discount calculated by applying subscription term against term discount schedule.</inlineHelpText>
        <label>Term Discount</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SBQQ__TotalDiscountAmount__c</fullName>
        <description>Total discount amount for this line item including volume discount, contracted discount, and additional discount.</description>
        <formula>IF(SBQQ__Bundled__c, 0,
IF(ISPICKVAL(SBQQ__DiscountScheduleType__c, &apos;Slab&apos;) &amp;&amp; NOT(SBQQ__Existing__c), (SBQQ__ProratedListPrice__c * SBQQ__Quantity__c - SBQQ__CustomerPrice__c),
IF(ISPICKVAL(SBQQ__DiscountScheduleType__c, &apos;Slab&apos;) &amp;&amp; SBQQ__Existing__c, (SBQQ__ProratedListPrice__c * (SBQQ__Quantity__c-SBQQ__PriorQuantity__c) - SBQQ__CustomerPrice__c),
(SBQQ__ProratedListPrice__c -  SBQQ__CustomerPrice__c) * SBQQ__EffectiveQuantity__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total discount amount for this line item including volume discount, contracted discount, and additional discount.</inlineHelpText>
        <label>Total Discount (Amt)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SBQQ__TotalDiscountRate__c</fullName>
        <description>Total discount for this line item including volume discount, contracted discount, and additional discount.</description>
        <formula>IF(SBQQ__ProratedListPrice__c == 0, 0,
IF(ISPICKVAL(SBQQ__DiscountScheduleType__c, &apos;Slab&apos;) &amp;&amp; NOT(SBQQ__Existing__c),
IF(SBQQ__Quantity__c == 0, 0, (SBQQ__ProratedListPrice__c * SBQQ__Quantity__c - SBQQ__CustomerPrice__c) / (SBQQ__Quantity__c * SBQQ__ProratedListPrice__c)),
IF(ISPICKVAL(SBQQ__DiscountScheduleType__c, &apos;Slab&apos;) &amp;&amp; SBQQ__Existing__c,
IF(SBQQ__Quantity__c == SBQQ__PriorQuantity__c, 0, (SBQQ__ProratedListPrice__c * (SBQQ__Quantity__c-SBQQ__PriorQuantity__c) - SBQQ__CustomerPrice__c) / ((SBQQ__Quantity__c-SBQQ__PriorQuantity__c) * SBQQ__ProratedListPrice__c)),
(SBQQ__ProratedListPrice__c - SBQQ__CustomerPrice__c) / SBQQ__ProratedListPrice__c)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Total discount for this line item including volume discount, contracted discount, and additional discount.</inlineHelpText>
        <label>Total Discount (%)</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SBQQ__UnitCost__c</fullName>
        <description>Cost for one unit of product quoted on this line item.</description>
        <inlineHelpText>Cost for one unit of product quoted on this line item.</inlineHelpText>
        <label>Unit Cost</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SBQQ__UnproratedNetPrice__c</fullName>
        <description>The full-term Net Price.</description>
        <inlineHelpText>The full term net price for individual line.</inlineHelpText>
        <label>Unprorated Net Price</label>
        <precision>16</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SBQQ__UpgradedAsset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Asset being upgraded by this quote line. Only populated if this quote line represents an upgrade.</description>
        <inlineHelpText>Asset being upgraded by this quote line. When the quote is contracted this asset will have its Usage End Date populated to indicate it&apos;s retired.</inlineHelpText>
        <label>Upgraded Asset</label>
        <referenceTo>Asset</referenceTo>
        <relationshipLabel>Quote Lines (Upgrade)</relationshipLabel>
        <relationshipName>UpgradeLines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__UpgradedQuantity__c</fullName>
        <description>Quantity being upgraded.</description>
        <inlineHelpText>Portion of this line&apos;s Prior Quantity being upgraded to another product.</inlineHelpText>
        <label>Upgraded Quantity</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>SBQQ__UpgradedSubscription__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Subscription being upgraded by this quote line.</description>
        <inlineHelpText>Subscription being upgraded by this quote line. When the quote is contracted this subscription will have its Terminated Date field populated.</inlineHelpText>
        <label>Upgraded Subscription</label>
        <referenceTo>SBQQ__Subscription__c</referenceTo>
        <relationshipLabel>Quote Lines (Upgrade)</relationshipLabel>
        <relationshipName>UpgradeLines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SBQQ__UpliftAmount__c</fullName>
        <description>Uplift (Amt) is measured as a currency amount. This is a system-calculated field, as Uplift can only be applied to MDQ segments in percent.</description>
        <inlineHelpText>Uplift (Amt) is measured as a currency amount. This is a system-calculated field, as Uplift can only be applied to MDQ segments in percent.</inlineHelpText>
        <label>Uplift (Amt)</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SBQQ__Uplift__c</fullName>
        <defaultValue>0.0</defaultValue>
        <description>Uplift is applied as a % against the previous year&apos;s price; the resulting price is entered into the Regular Price field on top of Special or Contracted Prices. Uplifts compound year after year. Uplift cannot be applied to the 1st Year of any Subscription.</description>
        <inlineHelpText>Uplift is applied as a % against the previous year&apos;s price; the resulting price is entered into the Regular Price field on top of Special or Contracted Prices. Uplifts compound year after year. Uplift cannot be applied to the 1st Year of any Subscription.</inlineHelpText>
        <label>Uplift</label>
        <precision>9</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SBQQ__VolumeDiscount__c</fullName>
        <description>Discount schedules allow you to specify volume discounts based on a percentage of the product&apos;s price to be discounted using the quantity purchased or term. You can set the quantity or term ranges in tiers of different discount percentages. You can also apply discount schedules to Subscription Term.</description>
        <inlineHelpText>Specify volume discounts based on a % of the product&apos;s price to be discounted using the quantity purchased or term. You can set the quantity or term ranges in tiers of different discount %. You can also apply discount schedules to Subscription Term.</inlineHelpText>
        <label>Volume Discount</label>
        <precision>14</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Size__c</fullName>
        <label>Size</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>40mm</fullName>
                </value>
                <value>
                    <fullName>44mm</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Special_Price_Formula__c</fullName>
        <formula>SBQQ__SpecialPrice__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Special Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>System_Voltage__c</fullName>
        <label>System Voltage</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>120V</fullName>
                </value>
                <value>
                    <fullName>240V</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Quote Line</label>
    <nameField>
        <displayFormat>QL-{0000000}</displayFormat>
        <label>Line Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Quote Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>SBQQ__Additional_discount_percent_or_amount</fullName>
        <active>true</active>
        <description>Validates additional discount is specified as a percentage or absolute amount but not both.</description>
        <errorConditionFormula>AND(NOT(ISBLANK(SBQQ__Discount__c)), NOT(ISBLANK(SBQQ__AdditionalDiscountAmount__c)),NOT(SBQQ__Incomplete__c))</errorConditionFormula>
        <errorMessage>You may not specify additional discount as both percentage and absolute amount.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SBQQ__Invalid_Subscription_Term</fullName>
        <active>true</active>
        <description>Validates that subscription term is positive</description>
        <errorConditionFormula>IF( AND( NOT(ISNULL(SBQQ__SubscriptionTerm__c)), SBQQ__SubscriptionTerm__c &lt;= 0), TRUE, null)</errorConditionFormula>
        <errorMessage>The subscription term must be a positive number.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SBQQ__Markup_percent_or_amount</fullName>
        <active>true</active>
        <description>Validates markup is specified as a percentage or absolute amount but not both.</description>
        <errorConditionFormula>AND(NOT(ISBLANK(SBQQ__MarkupRate__c)), NOT(ISBLANK(SBQQ__MarkupAmount__c)),NOT(SBQQ__Incomplete__c))</errorConditionFormula>
        <errorMessage>You may not specify markup as both percentage and absolute amount.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SBQQ__RecurringChargeTypeMustHaveBillingType</fullName>
        <active>true</active>
        <description>When Charge Type is Recurring, a Billing Type must be selected.</description>
        <errorConditionFormula>AND(ISPICKVAL(SBQQ__ChargeType__c, &apos;Recurring&apos;), ISPICKVAL(SBQQ__BillingType__c, &apos;&apos;))</errorConditionFormula>
        <errorDisplayField>SBQQ__BillingType__c</errorDisplayField>
        <errorMessage>When Charge Type is Recurring, a Billing Type must be selected.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SBQQ__Validate_billing_frequency</fullName>
        <active>true</active>
        <description>When Charge Type is One-Time, Billing Frequency must not be selected.</description>
        <errorConditionFormula>AND(ISPICKVAL(SBQQ__ChargeType__c, &apos;One-Time&apos;), NOT(ISPICKVAL(SBQQ__BillingFrequency__c, &apos;&apos;)))</errorConditionFormula>
        <errorDisplayField>SBQQ__BillingFrequency__c</errorDisplayField>
        <errorMessage>When Charge Type is One-Time, a Billing Frequency value cannot be selected.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>SBQQ__Validate_billing_type</fullName>
        <active>true</active>
        <description>When Charge Type is One-Time or Usage, a Billing Type cannot be selected.</description>
        <errorConditionFormula>OR( 
AND(ISPICKVAL(SBQQ__ChargeType__c, &apos;One-Time&apos;), NOT(ISPICKVAL(SBQQ__BillingType__c, &quot;&quot;))), 
AND(ISPICKVAL(SBQQ__ChargeType__c, &apos;Usage&apos;), NOT(ISPICKVAL(SBQQ__BillingType__c, &quot;&quot;))))</errorConditionFormula>
        <errorDisplayField>SBQQ__BillingType__c</errorDisplayField>
        <errorMessage>When Charge Type is One-Time or Usage, a Billing Type value cannot be selected.</errorMessage>
    </validationRules>
</CustomObject>